--- a/README.adoc
+++ b/README.adoc
@@ -4,7 +4,7 @@ Welcome to the ValidTEE project. We are just getting started.
 
 We currently have two documents available:
 
-* <<ValidiTEE-Design.adoc,ValidiTEE Design>> (Early Draft)
-* <<ValidiTEE-Goals.adoc,ValidiTEE Project Goals>>
+* link:ValidiTEE-Design.adoc[ValidiTEE Design] (Early Draft)
+* link:ValidiTEE-Goals.adoc[ValidiTEE Project Goals]
 
 Stay tuned!
